--- a/mikrotik-port-static-routing.html
+++ b/mikrotik-port-static-routing.html
@@ -3,29 +3,29 @@
   <head>
     <meta charset='utf-8'/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MikroTik Port Static Routing (Policy Based Routing) - BuanaNETPBun.Github.io</title>
-    <meta content='MikroTik Port Static Routing (Policy Based Routing) Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'/>
+    <title>MikroTik Port TCP/UDP Static Routing (Policy Based Routing) - BuanaNETPBun.Github.io</title>
+    <meta content='MikroTik Port TCP/UDP Static Routing (Policy Based Routing) Script Generator for RouterOS - BuanaNETPBun.Github.io' name='description'/>
     <meta content='block, webside, dns, doh, DNS over HTTPS, burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'/>
     <meta content='index, follow, noodp' name='robots'/>
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="MikroTik Port Static Routing (Policy Based Routing) By BuanaNET-Pbun">
-    <meta property="og:description" content="MikroTik Port Static Routing (Policy Based Routing) By BuanaNET-Pbun">
+    <meta property="og:title" content="MikroTik Port TCP/UDP Static Routing (Policy Based Routing) By BuanaNET-Pbun">
+    <meta property="og:description" content="MikroTik Port TCP/UDP Static Routing (Policy Based Routing) By BuanaNET-Pbun">
     <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/156894979-bdb1e588-58ca-45f5-bd10-1f9fb284909f.png">
-    <meta property="og:image:alt" content="MikroTik Port Static Routing (Policy Based Routing) By BuanaNET-Pbun">
+    <meta property="og:image:alt" content="MikroTik Port TCP/UDP Static Routing (Policy Based Routing) By BuanaNET-Pbun">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io/mikrotik-port-static-routing.html">
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
     <style>
-      /* --------------------------------------------------------
-      ###########################################################
-      # MikroTik Port Static Routing (Policy Based Routing)
+      /* ---------------------------------------------------------
+      ############################################################
+      # MikroTik Port TCP/UDP Static Routing (Policy Based Routing)
       # Designer  : Agus Ramadhani / BuanaNET.Pbun
       # Github    : https://buananetpbun.github.io
       # Site      : http://www.o-om.com
       # Sosmed    : https://fb.me/buananet.pbun	
-      ###########################################################
-      -------------------------------------------------------- */  
+      ############################################################
+      --------------------------------------------------------- */  
       *{-webkit-transition: all .3s ease-in;-moz-transition: all .3s ease-in;-ms-transition: all .3s ease-in;transition: all .3s ease-in;}
       body, div, span, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, textarea, p, blockquote, th, td, tr, table{margin:0; padding:0}
       body { font-size:16px; font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji; margin:0px;}
@@ -379,7 +379,7 @@
         </div>
       </div>
       <div class="header">
-        <h1>MIKROTIK PORT STATIC ROUTING (POLICY BASED ROUTING)</h1>
+        <h1>MIKROTIK PORT TCP/UDP STATIC ROUTING (POLICY BASED ROUTING)</h1>
       </div>
       <div class="sidebar">
 	  <div style="width:240px;float:left">
