--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="google-site-verification" content="VjnLBZ-ypbNyJxYE9KWmaIHeQ3K-4GO4h8Ddb1zMD28" />
     <meta property="og:title" content="MikroTik Online Tools (Unofficial) By BuanaNET-Pbun">
     <meta property="og:description" content="MikroTik Online Tools (Unofficial) By BuanaNET-Pbun">
-    <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/111909743-1741a080-8a91-11eb-9850-56536971f17d.png">
+    <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/157738242-2c4de210-d8b6-4f7c-ab3a-b420ab3835ec.png">
     <meta property="og:image:alt" content="MikroTik Online Tools (Unofficial) By BuanaNET-Pbun">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io">
@@ -404,10 +404,10 @@ cursor: pointer;
 		<p><a target="_blank"  href="https://router-os.github.io/">MikroTik RouterOS Search Script</a> - Search Engine for find all MikroTik RouterOS Script</p>  
 		<h3>// MIKROTIK SCRIPT GENERATOR BY BUANANET.PBUN</h3>    
 		<b>☰ ROUTE + MANGLE</b>
-		<p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC Script Generator</a> - LB PCC / Load Balancing PCC Script Generator or Script Maker For Mikrotik Routeros</p>
-		<p><a target="_blank"  href="https://buananetpbun.github.io/nth.html">Load Balancing NTH Script Generator</a> - LB NTH / Load Balancing NTH Script Generator or Script Maker For Mikrotik Routeros</p>
-		<p><a target="_blank"  href="https://buananetpbun.github.io/ecmp.html">Load Balancing ECMP Script Generator</a> - Load Balancing ECMP (Equal Cost Multi Path) Script Generator or Script Maker For Mikrotik Routeros</p>
-		<p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-failover-script-generator.html">Failover Script Generator</a> - Mikrotik Failover Script Generator - Recursive, Check Gateway, Netwatch Ping</p>
+		<p><a target="_blank"  href="https://buananetpbun.github.io/pcc.html">Load Balancing PCC Script Generator</a> - LB PCC / Load Balancing Per connection classifier (PCC) Script Generator or Script Maker for Mikrotik Routeros.</p>
+		<p><a target="_blank"  href="https://buananetpbun.github.io/nth.html">Load Balancing NTH Script Generator</a> - LB NTH / Load Balancing NTH Script Generator or Script Maker for Mikrotik Routeros</p>
+		<p><a target="_blank"  href="https://buananetpbun.github.io/ecmp.html">Load Balancing ECMP Script Generator</a> - LB ECMP / Load balancing Equal Cost Multi Path (ECMP) Script Generator or Script Maker for Mikrotik Routeros</p>
+		<p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-failover-script-generator.html">Routing Failover Script Generator</a> - Mikrotik Routing Failover Script Generator - Recursive, Check Gateway, Netwatch Ping</p>
 		<p><a target="_blank"  href="https://buananetpbun.github.io/policy-based-routing-website.html">Website IP Static Routing (Policy Based Routing)</a> - Policy Based Routing (PBR) or Static Routing for Website IP like Youtube, facebook, twitter, Instagram, whatsapp and any others</p>
 	    <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-port-static-routing.html">Port TCP/UDP Static Routing (Policy Based Routing)</a> - Policy Based Routing (PBR) or Static Routing using Port TCP/UDP like port port mail, ftp, ssh, telnet, hhtp, https, game port and others port</p>
 	    <p><a target="_blank"  href="https://buananetpbun.github.io/vpn-tunnel-all-traffic-script-generator.html">VPN Tunnel All Traffic Script Generator</a> - VPN Tunnel All Traffic Script Generator For Mikrotik RouterOS</p>
