--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@ function loadDoc() {
       document.getElementById("demo").innerHTML = this.responseText;
     }
   };
-  xhttp.open("GET", "https://api.maclookup.app/v2/macs/20:34:FB:E0:6D:14", true);
+  xhttp.open("GET", "https://api.maclookup.app/v2/macs/20:34:FB:E0:6D:14?apiKey=01g07y5xadt3t1xd0c1tpebe7e01g07y7ectajqg76kyc11yw20zzvlxeikk1gzm", true);
   xhttp.send();
 }
 </script>
