--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 # Designer  : Agus Ramadhani / BuanaNET
 # Github    : https://buananetpbun.github.io
 # Site      : http://www.o-om.com
-# Sosmed    : https://fb.me/buananet.pbun	
+# Sosmed    : https://fb.me/buananetmikrotik/	
 ################################################
 ----------------------------------------------- */  
 body {
@@ -369,7 +369,7 @@ cursor: pointer;
         <li><a href="https://buananetpbun.github.io">☰ HOME</a></li>
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
-        <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
+        <li><a target="_blank" href="https://fb.me/buananetmikrotik/">CONTACT</a></li>
         <img style="float:right; margin-right:10px;margin-top:2px" src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png" alt="Mikrotik RouterOS">
       </ul>
     </div>
