--- a/mikrotik-pcq-generator.html
+++ b/mikrotik-pcq-generator.html
@@ -23,7 +23,7 @@
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://github.com/buananetpbun
       # Site      : http://www.o-om.com
-      # Sosmed    : https://fb.me/buananet.pbun	
+      # Sosmed    : https://fb.me/buananetmikrotik
       ############################################################
       ----------------------------------------------- */  
       *{-webkit-transition: all .3s ease-in;-moz-transition: all .3s ease-in;-ms-transition: all .3s ease-in;transition: all .3s ease-in;}
@@ -349,7 +349,7 @@
         <li><a target="_blank" href="https://buananetpbun.github.io">☰ ALL TOOLS</a></li>
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
-        <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
+        <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
         <img style="float:right; margin-right:10px;margin-top:2px" src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png" alt="Mikrotik RouterOS">
       </ul>
     </div>
