--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -92,7 +92,7 @@
       padding: 10px;
       background-color:#ddd;
       border-bottom:0px solid #bbb; 
-      border-radius: 5px 5px 0 0 ;  
+      border-radius: 5px 5px 5px 5px ;  
       }
       .footer{
       font-size:13px;
@@ -242,7 +242,7 @@
       display: inline-block;
       } 
       .list-mangle {
-      height: 250px;
+      height: auto;
       background:#fff;
       overflow: auto;
       overflow-x: auto;
