--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -93,7 +93,7 @@
          padding: 20px;
          background-color:#f9f9f9;
          border-right:1px solid #bbb; 
-         border-radius: 5px 5px 0 0 ;  
+         border-radius: 5px;  
          }
          .footer{
          font-size:13px;
