--- a/static-routing-games.html
+++ b/static-routing-games.html
@@ -373,7 +373,7 @@
             <option value="ros7">ROS v7.xx</option>
           </select>
           <div style="margin-top:10px;margin-bottom:10px">
-            <label>Gateway to WAN or ISP Games</label>
+            <label>Gateway to WAN or ISP Game</label>
             <input type="text" id="ip-gateway-input" placeholder="example:192.168.2.1"><br>
           </div>
           <label>Select Mangle Games</label> <input type="text" id="myInput" onkeyup="myFunctionGames()" placeholder="find Game.."> 
