--- a/pcc.html
+++ b/pcc.html
@@ -370,10 +370,10 @@
             <label>Your ISP Line</label><br>
             <select style="margin-top:10px; width:100%" id="wan-list" onchange="myFunctionOuput()">
               <option value="line2">2 Line ISP</option>
-              <option value="line3">3 Line ISP</option>
-              <option value="line4">4 Line ISP</option>
-              <option value="line5">5 Line ISP</option>
-              <option value="line6">6 Line ISP</option>
+              <option disabled value="line3">3 Line ISP</option>
+              <option disabled value="line4">4 Line ISP</option>
+              <option disabled value="line5">5 Line ISP</option>
+              <option disabled value="line6">6 Line ISP</option>
             </select>
           </div>
           <div style="float:left; width:130px; margin-left:10px">
