--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -19,7 +19,7 @@
     <style>
       /* -----------------------------------------------------------------
       ####################################################################
-      # Mikrotik RouterOS Auto Backup to Mail
+      # MIKROTIK ROUTER-OS BACKUP TO MAIL SCRIPT GENERATOR
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://github.com/buananetpbun
       # Site      : http://www.o-om.com
@@ -363,7 +363,7 @@
       <span style="float:left; display:inline;margin-right:6px; margin-top: 10px">
       <a href="https://buananetpbun.github.io/mikrotik-backup-to-mail.html"><img src="https://buananetpbun.github.io/mikrotik/img/logo.png" alt="HOME"></a>
       </span>
-      <h1>MIKROTIK ROUTER-OS BACKUP TO MAIL GENERATOR</h1>
+      <h1>MIKROTIK ROUTER-OS BACKUP TO MAIL SCRIPT GENERATOR</h1>
     </div>
     <div class="main-wrap">
       <div class="sidebar">
