--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -383,9 +383,9 @@
             </select>
           </div>
           <label>Mail User</label>
-          <input style='margin-top:5px' type="text" id="input-mail-user" value="buananetmikrotik@gmail.com" placeholder="buananetmikrotik@gmail.com">
+          <input style='margin-top:5px' type="text" id="input-mail-user" value="backup.mikrotik.ros@gmail.com" placeholder="backup.mikrotik.ros@gmail.com">
           <label>Mail Password</label>
-          <input style='margin-top:5px' type="text" id="input-mail-password" value="jmhxbzgowsdvfiit" placeholder="jmhxbzgowsdvfiit">
+          <input style='margin-top:5px' type="text" id="input-mail-password" value="rhcylubiwfhxycee" placeholder="rhcylubiwfhxycee">
           <div style="margin-top:10px; margin-bottom:10px; border-top:5px solid #999"></div>
           <label>Backup File Option</label>
           <select id="input-file-option" onchange="myFunctionInput()">
