--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -401,7 +401,7 @@
             <option value="routing">Routing BGP, RIP etc. (.rsc)</option>
           </select>
           <label>Send file backup to your Mail</label>
-          <input style='margin-top:5px' type="text" id="input-to-mail" value="" placeholder="xxx@your-mail.com">
+          <input style='margin-top:5px' type="text" id="input-to-mail" value="" placeholder="mail@your-mail.com">
           <label>Mail From (title)</label>
           <input type="text" id="input-mail-from" value="" placeholder="Backup From Distribution">
           <label >Scheduler Send mail</label><br><span style='color:#ff6600;font-size:13px'>d (day) : 1d, 3d, 7d, 14d, 20d, 30d</span>
