--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -404,7 +404,7 @@
           <input style='margin-top:5px' type="text" id="input-to-mail" value="" placeholder="mail@your-mail.com">
           <label>Message Title From Router</label>
           <input type="text" id="input-mail-from" value="" placeholder="Backup From Distribution">
-          <label >Scheduler Send mail</label><br><span style='color:#ff6600;font-size:13px'>d (day) : 1d, 3d, 7d, 14d, 20d, 30d</span>
+          <label >Scheduler Send Mail</label><br><span style='color:#ff6600;font-size:13px'>d (day) : 1d, 3d, 7d, 14d, 20d, 30d</span>
           <input style='margin-top:5px' type="text" id="input-scheduler" value="" placeholder="7d">
         </div>
         <button style="margin-top:0px;" type="button" onclick="myFunctionInput()">Generate</button>
