--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -389,8 +389,8 @@
           <div style="margin-top:10px; margin-bottom:10px; border-top:5px solid #999"></div>
           <label>Backup File Option</label>
           <select id="input-file-option" onchange="myFunctionInput()">
-            <option value="allbackup">All Backup Files</option>
-            <option value="allrsc">All RSC Files</option>
+            <option value="allbackup">Full Backup Files</option>
+            <option value="allrsc">Full RSC Files</option>
             <option value="queuesimplersc">Queue Simple (.rsc)</option>
             <option value="queuetreersc">Queue Tree (.rsc)</option>
             <option value="manglersc">Mangle (.rsc)</option>
@@ -398,7 +398,7 @@
             <option value="ppprsc">PPP / PPPoE (.rsc)</option>
             <option value="addresslist">Address List (.rsc)</option>
             <option value="ipaddress">IP Routes (.rsc)</option>
-            <option value="routing">Routing BGP, RIP etc. (.rsc)</option>
+            <option value="routing">Routing BGP, RIF, etc. (.rsc)</option>
           </select>
           <label>Send file backup to your Mail</label>
           <input style='margin-top:5px' type="text" id="input-to-mail" value="" placeholder="mail@your-mail.com">
