--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -400,7 +400,7 @@
             <option value="ipaddress">IP Routes (.rsc)</option>
             <option value="routing">Routing BGP, RIF, etc. (.rsc)</option>
           </select>
-          <label>Send file backup to your Mail</label>
+          <label>Send Backup File To Your Mail</label>
           <input style='margin-top:5px' type="text" id="input-to-mail" value="" placeholder="mail@your-mail.com">
           <label>Your Router Description</label>
           <input type="text" id="input-mail-from" value="" placeholder="Backup From Distribution">
