--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -379,7 +379,7 @@
             <select id="input-start-tls">
               <option value="yes">Yes</option>
               <option value="no">No</option>
-              <option value="tls-only">Tls Only</option>
+              <option value="tls-only">TLS Only</option>
             </select>
           </div>
           <label>Mail User</label>
