--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -403,7 +403,7 @@
           <label>Send Backup File To Your Mail</label>
           <input style='margin-top:5px' type="text" id="input-to-mail" value="" placeholder="mail@your-mail.com">
           <label>Your Router Description</label>
-          <input type="text" id="input-mail-from" value="" placeholder="Backup From Distribution">
+          <input type="text" id="input-mail-from" value="" placeholder="From Router Load Balancing">
           <label >Scheduler Sending Mail</label><br><span style='color:#ff6600;font-size:13px'>d (day) : 1d, 3d, 7d, 14d, 20d, 30d</span>
           <input style='margin-top:5px' type="text" id="input-scheduler" value="" placeholder="7d">
         </div>
@@ -440,7 +440,7 @@
                 \n/system backup save name=\$backupfile\r\</br>
                 \n:delay 20s\r\</br>
                 \n:log warning \"-> Backup Being Emailed\"\r\</br>	
-                \n/tool e-mail send to=\"<span style="color:#ff6600" id="mail-to1">mail@your-mail.com</span>\" subject=([/system identity get name] . \" - \". [/system clock get time] . \" - \" . [/system clock get date] . \"\") from=\"<span style="color:#ff6600" id="mail-from2">Backup From Distribution</span>\" file=(\"\$backupfile\" . \".backup\")\r\</br>
+                \n/tool e-mail send to=\"<span style="color:#ff6600" id="mail-to1">mail@your-mail.com</span>\" subject=([/system identity get name] . \" - \". [/system clock get time] . \" - \" . [/system clock get date] . \"\") from=\"<span style="color:#ff6600" id="mail-from2">From Router Load Balancing</span>\" file=(\"\$backupfile\" . \".backup\")\r\</br>
                 \n:delay 20s\r\</br>
                 \n:log warning \"-> Backup File Remove\"\r\</br>
                 \n/file remove (\"\$backupfile\" . \".backup\")\r\</br>
@@ -454,7 +454,7 @@
                 \n<span id="export-rsc"></span> file=\$backupfilersc\r\</br>
                 \n:delay 20s\r\</br>
                 \n:log warning \"-> Backup Being Emailed\"\r\</br>	
-                \n/tool e-mail send to=\"<span style="color:#ff6600" id="mail-to2">mail@your-mail.com</span>\" subject=([/system identity get name] . \" - \". [/system clock get time] . \" - \" . [/system clock get date] . \"\") from=\"<span style="color:#ff6600" id="mail-from3">Backup From Distribution</span>\" file=(\"\$backupfilersc\" . \".rsc\")\r\</br>
+                \n/tool e-mail send to=\"<span style="color:#ff6600" id="mail-to2">mail@your-mail.com</span>\" subject=([/system identity get name] . \" - \". [/system clock get time] . \" - \" . [/system clock get date] . \"\") from=\"<span style="color:#ff6600" id="mail-from3">From Router Load Balancing</span>\" file=(\"\$backupfilersc\" . \".rsc\")\r\</br>
                 \n:delay 20s\r\</br>
                 \n:log warning \"-> Backup File Remove\"\r\</br>
                 \n/file remove (\"\$backupfilersc\" . \".rsc\")\r\</br>
