--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -402,7 +402,7 @@
           </select>
           <label>Send Backup File To Your Mail</label>
           <input style='margin-top:5px' type="text" id="input-to-mail" value="" placeholder="mail@your-mail.com">
-          <label>Your Router Description</label>
+          <label>Your Router Description (Mail Title)</label>
           <input type="text" id="input-mail-from" value="" placeholder="From Router Load Balancing">
           <label >Scheduler Sending Mail</label><br><span style='color:#ff6600;font-size:13px'>d (day) : 1d, 3d, 7d, 14d, 20d, 30d</span>
           <input style='margin-top:5px' type="text" id="input-scheduler" value="" placeholder="7d">
@@ -425,7 +425,7 @@
                 # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
                 ###################################################<br>
                 </span>
-                /tool e-mail set address="<span style="color:#ff6600" id="mail-server">74.125.200.109</span>" from="<span style="color:#ff6600" id="mail-from1">Backup From Router Distribution</span>" password="<span style="color:#ff6600" id="mail-pass">rhcylubiwfhxycee</span>" port="<span style="color:#ff6600"  id="mail-port">587</span>" start-tls="<span style="color:#ff6600" id="mail-tls">yes</span>" user="<span style="color:#ff6600" id="mail-user">backup.mikrotik.ros@gmail.com</span>"</br>
+                /tool e-mail set address="<span style="color:#ff6600" id="mail-server">74.125.200.109</span>" from="<span style="color:#ff6600" id="mail-from1">From Router Load Balancing</span>" password="<span style="color:#ff6600" id="mail-pass">rhcylubiwfhxycee</span>" port="<span style="color:#ff6600"  id="mail-port">587</span>" start-tls="<span style="color:#ff6600" id="mail-tls">yes</span>" user="<span style="color:#ff6600" id="mail-user">backup.mikrotik.ros@gmail.com</span>"</br>
                 /system scheduler rem [find name=BACKUP-TO-MAIL]<br>
                 /system scheduler add interval=<span style="color:#ff6600" id="mail-interval">7d</span> name=BACKUP-TO-MAIL on-event="#=======================================================\r\</br>
                 \n# Mikrotik RouterOS Auto Backup to Mail by Buananetpbun.github.io\r\</br>
