--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -389,8 +389,8 @@
           <div style="margin-top:10px; margin-bottom:10px; border-top:5px solid #999"></div>
           <label>Backup File Option</label>
           <select id="input-file-option" onchange="myFunctionInput()">
-            <option value="allbackup">Full Backup Files</option>
-            <option value="allrsc">Full RSC Files</option>
+            <option value="allbackup">Full Backup Files (.backup)</option>
+            <option value="allrsc">Full RSC Files (.rsc)</option>
             <option value="queuesimplersc">Queue Simple (.rsc)</option>
             <option value="queuetreersc">Queue Tree (.rsc)</option>
             <option value="manglersc">Mangle (.rsc)</option>
