--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -402,7 +402,7 @@
           </select>
           <label>Send Backup File To Your Mail</label>
           <input style='margin-top:5px' type="text" id="input-to-mail" value="" placeholder="mail@your-mail.com">
-          <label>Your Router Description (Mail Title)</label>
+          <label>Router Description / Mail Title</label>
           <input type="text" id="input-mail-from" value="" placeholder="From Router Load Balancing">
           <label >Scheduler Sending Mail</label><br><span style='color:#ff6600;font-size:13px'>d (day) : 1d, 3d, 7d, 14d, 20d, 30d</span>
           <input style='margin-top:5px' type="text" id="input-scheduler" value="" placeholder="7d">
